--- a/Project Euler/Project Euler.csproj
+++ b/Project Euler/Project Euler.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net7.0</TargetFramework>
-    <RootNamespace>Project_Euler</RootNamespace>
+    <RootNamespace>ProjectEuler</RootNamespace>
   </PropertyGroup>
 
 </Project>
